<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookPath</string>
    <string name="welcome">Welcome</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="account_overview">Account Overview</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="afrikaans">Afrikaans</string>
    <string name="zulu">Zulu</string>

    <!-- Login Screen Strings -->
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">REGISTER</string>

    <!-- New strings for Profile layout -->
    <string name="profile_picture">Profile picture</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>

    <!-- View Task Strings -->
    <string name="task_title_default">Task Title</string>
    <string name="category_label">Category:</string>
    <string name="category_default">Study</string>
    <string name="status_label">Status:</string>
    <string name="status_default">Active</string>
    <string name="start_date_label">Start Date:</string>
    <string name="end_date_label">End Date:</string>
    <string name="due_time_label">Due Time:</string>
    <string name="date_default">Not set</string>
    <string name="time_default">Not set</string>
    <string name="description_label">Description</string>
    <string name="description_default">Task description goes here with all the details about what needs to be done for this particular task.</string>
    <string name="document_label">Document</string>
    <string name="document_default">No document attached</string>
    <string name="edit_button">EDIT</string>
    <string name="delete_button">DELETE</string>
    <string name="task_overview">Task Overview</string>
    <string name="no_tasks_message">No tasks found. Add your first task!</string>
    <string name="home">Home</string>
    <string name="add_task">Add Task</string>
    <string name="tasks">Tasks</string>
    <string name="chat">Chat</string>
</resources>